fix grid template on mobile

--- a/src/styles/global/global.sass
+++ b/src/styles/global/global.sass
@@ -32,6 +32,7 @@ body
     background-size: cover
     background-repeat: no-repeat
     box-shadow: 4px 4px 25px rgba(0, 0, 0, 0.15)
+    grid-area: left
     height: 380px
 
   .img2 
@@ -39,6 +40,7 @@ body
     background-size: cover
     background-repeat: no-repeat  
     box-shadow: 4px 4px 25px rgba(0, 0, 0, 0.15)
+    grid-area: right
 
   .img3 
     background: url('../assets/img3.png')
